<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/core_background_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.simpledeveloper.businesssrecon.activities.BusinessReconActivity"
    tools:showIn="@layout/activity_business_recon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:cardView="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_weight=".6"
            cardView:cardBackgroundColor="@color/core_background"
            cardView:cardCornerRadius="3dp"
            android:layout_height="0dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/title"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:padding="8dp"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:cardView="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_weight=".4"
            cardView:cardBackgroundColor="@color/core_background"
            cardView:cardCornerRadius="3dp"
            android:layout_height="0dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <TextView
                    android:id="@+id/stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/stats"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/questions_value"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@android:color/transparent"
                    android:layout_alignTop="@+id/stats_value"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>

                <ImageView
                    android:id="@+id/stats_value"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@android:color/transparent"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"/>



            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:cardView="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            cardView:cardBackgroundColor="@color/core_background"
            cardView:cardCornerRadius="3dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="220dp">

                <TextView
                    android:id="@+id/goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/goal"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/goal"
                    android:padding="8dp"
                    android:text="@string/goal_desc"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
